--- a/force-app/main/default/classes/client/SlackApiClient.cls
+++ b/force-app/main/default/classes/client/SlackApiClient.cls
@@ -1,22 +1,31 @@
-// Slack API Config
-
+// Inspired by MethodsClientImpl.java from Slack SDK for Java
+// Responsible for setting up the request and parsing the response
 public class SlackApiClient {
-    private Http httpClient;
+    private SlackHttpClient slackHttpClient;
     private String token;
 
     public SlackApiClient(String token) {
         this.token = token;
-        httpClient = new Http();
+        httpClient = new SlackHttpClient();
     }
 
-    // Why queueable?
-    public void usersLookupByEmail(String email) {
-        HttpRequest req = new HttpRequest();
-        // req.setEndpoint(base)
+    public UsersLookupByEmailResponse usersLookupByEmail(UsersLookupByEmailRequest req) {
+        String method = 'users.LookupByEmail';
 
+        HttpRequestQueryParams params = new HttpRequestQueryParams();
+        params.addParam('email', req.getEmail());
+
+        HttpResponse res = slackHttpClient.get(method, params);
+
+        return JSON.deserialize(res.getBody(), UsersLookupByEmailResponse.class);
     }
 
-    public void chatPostMessage() {
+    public ChatPostMessageResponse chatPostMessage(ChatPostMessageRequest req) {
+        String method = 'chat.postMessage';
         
+        HttpResponse res = slackHttpClient.post(method, JSON.serialize(req));
+
+        return JSON.deserialize(res.getBody(), ChatPostMessageResponse.class);
+
     }
 }
