Method client request objects created with builders (validation needed), made minor edits to methods client, created request factory method in http client

--- a/force-app/main/default/classes/client/SlackApiClient.cls
+++ b/force-app/main/default/classes/client/SlackApiClient.cls
@@ -10,22 +10,18 @@ public class SlackApiClient {
     }
 
     public UsersLookupByEmailResponse usersLookupByEmail(UsersLookupByEmailRequest req) {
-        String method = 'users.LookupByEmail';
-
+        final String method = 'users.LookupByEmail';
         HttpRequestQueryParams params = new HttpRequestQueryParams();
         params.addParam('email', req.getEmail());
-
         HttpResponse res = slackHttpClient.get(method, params);
 
         return JSON.deserialize(res.getBody(), UsersLookupByEmailResponse.class);
     }
 
     public ChatPostMessageResponse chatPostMessage(ChatPostMessageRequest req) {
-        String method = 'chat.postMessage';
-        
+        final String method = 'chat.postMessage';
         HttpResponse res = slackHttpClient.post(method, JSON.serialize(req));
 
         return JSON.deserialize(res.getBody(), ChatPostMessageResponse.class);
-
     }
 }
