--- a/force-app/main/default/classes/client/SlackHttpClient.cls
+++ b/force-app/main/default/classes/client/SlackHttpClient.cls
@@ -1,6 +1,9 @@
+// Responsible for constructing Slack HTTP requests and executing them in the context of the Slack API
+
 public class SlackHttpClient {
     private static final String BASE_URL = 'https://slack.com/api';
-    
+    private static final Integer DEFAULT_TIMEOUT = 60000;
+
     private final Http client;
     
     public SlackHttpClient() {
@@ -13,10 +16,8 @@ public class SlackHttpClient {
 
     public HttpResponse get(String apiMethod, HttpRequestQueryParams params) {
         final String httpMethod = 'GET';
-        HttpRequest req = getBaseRequest(httpMethod);
-        setRequestEndpoint(req, apiMethod, params);
 
-        return client.send(req);
+        return client.send(createRequest(httpMethod, apiMethod, params));
     }
 
     public HttpResponse post(String apiMethod, Object jsonBody) {
@@ -25,26 +26,34 @@ public class SlackHttpClient {
 
     public HttpResponse post(String apiMethod, HttpRequestQueryParams params, String jsonBody) {
         final String httpMethod = 'POST';
-        HttpRequest req = getBaseRequest(httpMethod);
-        setRequestEndpoint(req, apiMethod, params);
-        req.setBody(jsonBody);
 
-        return client.send(req);
+        return client.send(createRequest(httpMethod, apiMethod, params, jsonBody));
     }
 
-    private HttpRequest getBaseRequest(String httpMethod) {
-        HttpRequest req = new HttpRequest();
-        req.setMethod(httpMethod);
-        req.setTimeout(60000);
+    private HttpRequest createRequest(String httpMethod, String apiMethod, HttpRequestQueryParams params) {
+        return createRequest(httpMethod, apiMethod, params, null);
     }
 
-    private void setRequestEndpoint(HttpRequest req, String apiMethod, HttpRequestQueryParams params) {
+    private HttpRequest createRequest(String httpMethod, String apiMethod, HttpRequestQueryParams params, String jsonBody) {
         String endpoint = BASE_URL + '/' + apiMethod;
-        if (params != null) {
-            req.setEndpoint(endpoint + '?' + params.expand());
-        } else {
-            req.setEndpoint(endpoint);
+        
+        HttpRequest req = new HttpRequest();
+        req.setTimeout(DEFAULT_TIMEOUT);
+        req.setMethod(httpMethod);
+        req.setEndpoint((params == null) ? endpoint : endpoint + '?' + params.expand());
+        if (jsonBody != null) {
+            req.setBody(jsonBody);
         }
+
+        return req;
+        
+        // SlackHttpRequest req = new SlackHttpRequest(httpMethod);
+        // req.setEndpoint(apiMethod, params);
+        // if (jsonBody != null) {
+        //     req.setBody(jsonBody);
+        // }
+
+        // return req.getHttpRequest();
     }
 
     
