syntax changes for compilation

--- a/force-app/main/default/classes/client/SlackApiClient.cls
+++ b/force-app/main/default/classes/client/SlackApiClient.cls
@@ -6,22 +6,22 @@ public class SlackApiClient {
 
     public SlackApiClient(String token) {
         this.token = token;
-        httpClient = new SlackHttpClient();
+        slackHttpClient = new SlackHttpClient();
     }
 
     public UsersLookupByEmailResponse usersLookupByEmail(UsersLookupByEmailRequest req) {
         final String method = 'users.LookupByEmail';
         HttpRequestQueryParams params = new HttpRequestQueryParams();
-        params.addParam('email', req.getEmail());
+        params.setParam('email', req.getEmail());
         HttpResponse res = slackHttpClient.get(method, params);
 
-        return JSON.deserialize(res.getBody(), UsersLookupByEmailResponse.class);
+        return (UsersLookupByEmailResponse) JSON.deserialize(res.getBody(), UsersLookupByEmailResponse.class);
     }
 
     public ChatPostMessageResponse chatPostMessage(ChatPostMessageRequest req) {
         final String method = 'chat.postMessage';
         HttpResponse res = slackHttpClient.post(method, JSON.serialize(req));
 
-        return JSON.deserialize(res.getBody(), ChatPostMessageResponse.class);
+        return (ChatPostMessageResponse) JSON.deserialize(res.getBody(), ChatPostMessageResponse.class);
     }
 }
