bug fix: json serialization didn't omit nulls

--- a/force-app/main/default/classes/client/SlackApiClient.cls
+++ b/force-app/main/default/classes/client/SlackApiClient.cls
@@ -18,7 +18,7 @@ public class SlackApiClient {
 
     public ChatPostMessageResponse chatPostMessage(ChatPostMessageRequest req) {
         final String method = 'chat.postMessage';
-        HttpResponse res = slackHttpClient.post(method, JSON.serialize(req));
+        HttpResponse res = slackHttpClient.post(method, JSON.serialize(req, true));
 
         return (ChatPostMessageResponse) JSON.deserialize(res.getBody(), ChatPostMessageResponse.class);
     }
