Can now correctly deserialize

--- a/force-app/main/default/classes/client/ChatPostMessageResponse.cls
+++ b/force-app/main/default/classes/client/ChatPostMessageResponse.cls
@@ -1,5 +1,32 @@
-public with sharing class ChatPostMessageResponse {
-    public ChatPostMessageResponse() {
+public class ChatPostMessageResponse implements SlackApiResponse {
+    private Boolean ok;
+    private String error;
+    private String channel;
+    // Long, 5 decimal places, but comes as string?
+    // the same as SlackMessage.ts
+    private String ts;
+    private SlackMessage message;
 
+    // Only created through deserialization
+    private ChatPostMessageResponse() {}
+
+    public Boolean getOk() {
+        return ok;
+    }
+
+    public String getError() {
+        return error;
+    }
+
+    public String getChannel() {
+        return channel;
+    }
+
+    public String getTs() {
+        return ts;
+    }
+
+    public SlackMessage getMessage() {
+        return message;
     }
 }
